--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,6 +87,7 @@ p { margin-bottom: var(--spacing); }
 .profile-details h1 {
     margin-top: 0;          /* Remove top margin to align with top of image */
     line-height: 1.2;
+    font-size: 2.1rem;
 }
 
 .subtitle {
@@ -142,5 +143,5 @@ article li a strong {
 
 /* Mobile Optimization */
 @media (max-width: 600px) {
-    body { padding: 1rem; font-size: 16px; }
+    body { padding: 1rem; }
 }
