added profile picture low res

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="profile-header">
-    <img src="/images/profile.jpg" alt="{{ .Site.Params.Author }}" class="profile-img">
+    <img src="/images/profile_lr.jpg" alt="{{ .Site.Params.Author }}" class="profile-img">
     
     <div class="profile-details">
         <h1>{{ .Site.Params.Author }}</h1>
