--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -33,5 +33,14 @@
     <footer style="margin-top: 3rem; border-top: 1px solid #eee; padding-top: 1rem; font-size: 0.8em; color: #888;">
         &copy; {{ now.Year }} {{ .Site.Params.Author }}
     </footer>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W3CY27XG1V"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){ dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-W3CY27XG1V');
+    </script>
 </body>
 </html>
