added several seo optimizations

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="profile-header">
-    <img src="/images/profile.jpg" alt="{{ .Site.Params.Author }}" class="profile-img">
+    <img src="/images/profile.webp" alt="{{ .Site.Params.Author }}" class="profile-img">
     
     <div class="profile-details">
         <h1>{{ .Site.Params.Author }}</h1>
@@ -39,9 +39,9 @@
     "sameAs": [
         "{{ .Site.Params.github }}",
         "{{ .Site.Params.linkedin }}",
-        "{{ .Site.Params.substack }}"
+        "{{ .Site.Params.blog }}"
       ],
-    "jobTitle": "Software Engineer",
+    "jobTitle": "Software Engineer at Google Warsaw",
     "description": "{{ .Site.Params.description }}",
     "knowsAbout": ["Software engineering", "C++", "Low-level programming", "Anzio", "Italy", "Sapienza", "Utrecht"]
 }
