auto inlining css in baseof.html

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,7 +16,11 @@
     {{ with .Params.image }}<meta property="og:image" content="{{ . | absURL }}">{{ end }}
 
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+
+    {{ $style := resources.Get "css/style.css" | resources.Minify }}
+    <style>
+        {{ $style.Content | safeCSS }}
+    </style> 
     
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
